--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body.loaded {
 
 #hero {
   position: relative;
-  height: var(--);
+  height: var(--vh, 100vh);
   width: 100%;
   overflow: hidden;
 }
@@ -232,7 +232,7 @@ body.loaded {
 .couple-full {
   position: relative;
   width: 100vw;
-  height: var(--);
+  height: var(--vh, 100vh);
   overflow: hidden;
 }
 
@@ -902,7 +902,7 @@ body.loaded {
 ================================================================= */
 #closing-cinematic {
   position: relative;
-  min-height: var(--);
+  min-height: var(--vh, 100vh);
   display: flex;
   justify-content: center;
   align-items: center;
