--- a/style.css
+++ b/style.css
@@ -15,9 +15,19 @@ html, body {
 }
 
 body {
-    background: url("assets/images/cover.webp") center/cover no-repeat;
-    background-attachment: fixed; /* optional, buat efek stabil */
+  position: relative;
+  margin: 0;
 }
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: url('assets/images/cover.webp') center/cover no-repeat;
+  transform: scale(1.05);
+  z-index: -10;
+}
+
 
 @supports (-webkit-touch-callout: none) {
   body.loaded {
